# empathy-for-learning

./: .gitignore  README.md
Backend/: .env  auth.py  database.py  main.py  models.py  requirements.txt
Backend/app/: main.py
Backend/app/core/: config.py  security.py  validators.py
Backend/app/db/: database.py
Backend/app/dependencies/: auth_dependency.py
Backend/app/models/: auth_models.py  profile_models.py  user_models.py
Backend/app/routes/: auth_routes.py  profile_routes.py
Backend/app/services/: auth_service.py  profile_service.py
Backend/routes/: auth_routes.py
backend/: .env  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
backend/api_gateway/: main.py
backend/shared/middleware/: auth.py
backend/shared/models/: user.py
docs/: ARCHITECTURE.md  SECURITY.md  SETUP.md
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/common/: PrivateRoute.jsx
frontend/src/components/layout/: Header.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: AssessmentPage.jsx  DashboardPage.jsx  LoginPage.jsx  ProgressReportPage.jsx  QuizPage.jsx  assessment.tsx  chat.tsx  index.tsx  login.tsx  profile.tsx  register.tsx
frontend/src/utils/: axiosInstance.js  constants.js  mockData.js
